--- a/experiment_1.ipynb
+++ b/experiment_1.ipynb
@@ -17,6 +17,24 @@
    "source": [
     "print(\"hellp\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8c415f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f62949",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
