--- a/experiment_1.ipynb
+++ b/experiment_1.ipynb
@@ -34,12 +34,15 @@
    "id": "65f62949",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "ml-env (3.10.12)",
    "language": "python",
    "name": "python3"
   },
@@ -53,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
