--- a/Homework_06.ipynb
+++ b/Homework_06.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -194,9 +194,7 @@
      "text": [
       "[nltk_data] Downloading package brown to\n",
       "[nltk_data]     /home/michtdizzle/nltk_data...\n",
-      "[nltk_data]   Package brown is already up-to-date!\n",
-      "/home/michtdizzle/ml-env/lib/python3.10/site-packages/spacy/pipeline/lemmatizer.py:188: UserWarning: [W108] The rule-based lemmatizer did not find POS annotation for one or more tokens. Check that your pipeline includes components that assign token.pos, typically 'tagger'+'attribute_ruler' or 'morphologizer'.\n",
-      "  warnings.warn(Warnings.W108)\n"
+      "[nltk_data]   Package brown is already up-to-date!\n"
      ]
     }
    ],
@@ -233,6 +231,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"I have the whole Pacific Northwest '' .\",\n",
+       " 'It is a happy , buzzing crowd .',\n",
+       " 'Then I calculated that a million peas would just about fill a household refrigerator ; ;',\n",
+       " 'Moreover , they have done so in rather special circumstances .',\n",
+       " \"What would you do in my place '' ? ?\",\n",
+       " 'And in these organizations certain primal notions played a radiant part , radiant both in the sense of giving light and of being a pole toward which all perspectives converge .',\n",
+       " 'It was not a heavy , ponderous Beethoven .',\n",
+       " \"He added that he also stresses the works of these favorite masters on tour , especially Mahler's First and Fourth symphonies , and Das Lied Von der Erde , and Bruckner's Sixth -- which is rarely played -- and Seventh .\",\n",
+       " 'Honor attendants for the couple were Miss Sandra Branum and Warren V. McRoberts .',\n",
+       " 'A message of less than fifteen words to Bennington cost twenty-five cents .']"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brown_texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I PRON\n",
+      "have VERB\n",
+      "the DET\n",
+      "whole ADJ\n",
+      "Pacific PROPN\n",
+      "Northwest PROPN\n",
+      "'' PUNCT\n",
+      ". PUNCT\n",
+      "\n",
+      "\n",
+      "Pacific Northwest '' LOC\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(brown_texts[0])\n",
+    "for doc_text in doc:\n",
+    "    print(doc_text.text,doc_text.pos_)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "for doc_text in doc.ents:\n",
+    "    print(doc_text.text, doc_text.label_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -245,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +314,7 @@
        "'\\nimport re, requests, random, spacy\\n\\n# Paste the shared Drive link (no need to change anything else)\\nlink = \"https://drive.google.com/file/d/1f_BkNDF0ny11Tn4D4jsOoXhgPSUCHKlf/view?usp=drive_link\"\\n\\n# --- Convert to direct download URL ---\\ndef get_direct_download_url(link):\\n    match = re.search(r\"/d/([a-zA-Z0-9_-]+)\", link) or re.search(r\"id=([a-zA-Z0-9_-]+)\", link)\\n    if not match:\\n        raise ValueError(\"Could not extract file ID from the link.\")\\n    file_id = match.group(1)\\n    return f\"https://drive.google.com/uc?export=download&id={file_id}\"\\n\\nurl = get_direct_download_url(link)\\n\\n# --- Download and prepare the text ---\\nresponse = requests.get(url)\\nlines = response.text.strip().split(\"\\n\")\\n\\nrandom.shuffle(lines)\\n\\n\\n# Etc as before\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +630,10 @@
       "['<s>', 'he', 'let', 'her', 'tell', 'him', 'all', 'about', 'the', 'church', '.', '</s>']\n",
       "\n",
       "Bigrams\n",
-      "[('<s>', 'he'), ('he', 'let'), ('let', 'her'), ('her', 'tell'), ('tell', 'him'), ('him', 'all'), ('all', 'about'), ('about', 'the'), ('the', 'church'), ('church', '.'), ('.', '</s>')]\n"
+      "[('<s>', 'he'), ('he', 'let'), ('let', 'her'), ('her', 'tell'), ('tell', 'him'), ('him', 'all'), ('all', 'about'), ('about', 'the'), ('the', 'church'), ('church', '.'), ('.', '</s>')]\n",
+      "\n",
+      "Trigrams\n",
+      "[('<s>', 'he', 'let'), ('he', 'let', 'her'), ('let', 'her', 'tell'), ('her', 'tell', 'him'), ('tell', 'him', 'all'), ('him', 'all', 'about'), ('all', 'about', 'the'), ('about', 'the', 'church'), ('the', 'church', '.'), ('church', '.', '</s>')]\n"
      ]
     }
    ],
@@ -587,7 +650,134 @@
     "print(tokenized_sentences[0])\n",
     "\n",
     "print(\"\\nBigrams\")\n",
-    "print(get_ngrams(tokenized_sentences[:1],2))"
+    "print(get_ngrams(tokenized_sentences[:1],2))\n",
+    "\n",
+    "print(\"\\nTrigrams\")\n",
+    "print(get_ngrams(tokenized_sentences[:1],3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_word_lists = {}\n",
+    "\n",
+    "for ng in get_ngrams(tokenized_sentences,2):\n",
+    "    prefix = ng[:1]\n",
+    "    next_word = ng[-1]\n",
+    "    next_word_lists[prefix] = next_word_lists.get(prefix, []) + [next_word]\n",
+    "\n",
+    "# trigrams\n",
+    "for ng in get_ngrams(tokenized_sentences, 3):\n",
+    "    prefix = ng[:1]\n",
+    "    next_word = ng[-1]\n",
+    "    next_word_lists[prefix] = next_word_lists.get(prefix, []) + [next_word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'and': -0.6931471805599453, 'then': -1.3862943611198906, 'when': -1.3862943611198906}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tokens2logprobs(tokens):\n",
+    "    return {w : math.log(f/len(tokens)) for w, f in Counter(tokens).items()}\n",
+    "\n",
+    "def get_log_prob_dist(dic):\n",
+    "    return { left_context: tokens2logprobs(next_words) for left_context, next_words in dic.items()}\n",
+    "\n",
+    "print(tokens2logprobs(['and','then','and','when']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_next_word = get_log_prob_dist(next_word_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'he': -2.3025850929940455,\n",
+       " 'china': -2.995732273553991,\n",
+       " 'finally': -2.995732273553991,\n",
+       " 'a': -2.995732273553991,\n",
+       " 'during': -2.995732273553991,\n",
+       " 'it': -2.995732273553991,\n",
+       " 'just': -2.995732273553991,\n",
+       " 'water': -2.995732273553991,\n",
+       " 'cholesterol': -2.995732273553991,\n",
+       " 'let': -2.995732273553991,\n",
+       " 'never': -2.995732273553991,\n",
+       " ',': -2.3025850929940455,\n",
+       " 'major': -2.995732273553991,\n",
+       " 'rolled': -2.995732273553991,\n",
+       " 'the': -2.995732273553991,\n",
+       " 'is': -2.995732273553991,\n",
+       " 'figures': -2.995732273553991,\n",
+       " 'rationing': -2.995732273553991}"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_next_word[('<s>',)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_next_word(left_context):\n",
+    "    next_word_log_probs = get_next_word[left_context]\n",
+    "    next_words = list(next_word_log_probs.keys())\n",
+    "    next_word_probs = [ math.exp(lp) for lp in next_word_log_probs.values()]\n",
+    "    return random.choices( next_words, weights=next_word_probs)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('<s>',): ['cholesterol', 'let', 'he', 'rationing', 'let']\n",
+      "('the',): ['noise', 'summer', 'council', ',', 'cornerstone']\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = ('<s>',)\n",
+    "print(f\"{c}: {[sample_next_word(c) for _ in range(5)]}\")\n",
+    "\n",
+    "c = ('the',)\n",
+    "print(f\"{c}: {[sample_next_word(c) for _ in range(5)]}\")"
    ]
   },
   {
@@ -601,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
